# OPT-AIL

./: README.md  pyproject.toml  train_il.py
agent/: __init__.py  bc.py  cmil.py  dac.py  hyper.py  mb_ail.py  mbpo.py  opt_ail.py  sac.py
conf/: config.yaml
conf/agent/: bc.yaml  cmil.yaml  hyper.yaml  mb_ail.yaml  mbpo.yaml  opt_ail.yaml  sac.yaml
conf/env/: cartpole_swingup.yaml  cheetah_run.yaml  finger_spin.yaml  hopper_hop.yaml  hopper_stand.yaml  humanoid_stand.yaml  quadruped_run.yaml  quadruped_walk.yaml  walker_run.yaml  walker_stand.yaml  walker_walk.yaml
module/: actor.py  critic.py  discriminator.py  dynamics.py  net.py  scaler.py
scripts/: run_mb.sh  run_mf.sh
utils/: logger.py  utils.py
